--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -1,7 +1,6 @@
 @import "../../main.scss";
 
 .main {
-    flex: 1;
 
     &__nav {
         display: flex;
@@ -28,14 +27,10 @@
             &:hover {
                 text-decoration: underline;
             }
+
+            &__icon {
+                margin-right: 4px;
+            }
         }
     }
-}
-
-.sr-only {
-    @include sr-only;
-}
-
-.fa {
-    margin-right: 4px;
 }
