--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -15,3 +15,15 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
+
+.main {
+  flex: 1;
+}
+
+.bg-dark {
+  background-color: $color-backgroundDark;
+}
+
+.sr-only {
+  @include sr-only;
+}
