--- a/frontend/src/pages/login/login.scss
+++ b/frontend/src/pages/login/login.scss
@@ -5,8 +5,11 @@
     background-color: $color-backgroundLight;
     width: 300px;
     margin: 0 auto;
-    margin-top: 3rem;
     padding: 2rem;
+    position: absolute;
+    top: 3rem;
+    left: 0;
+    right: 0;
 
     &__icon {
         font-size: 5rem;
