--- a/frontend/designs/css/main.css
+++ b/frontend/designs/css/main.css
@@ -6,7 +6,7 @@ html {
   color: #2c3e50;
 }
 
-body {
+body, #root {
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -16,6 +16,7 @@ body {
 .main {
   position: relative;
   height: 100vh;
+  flex: 1;
 }
 
 .bg-dark {
