--- a/frontend/src/components/loginForm/loginForm.scss
+++ b/frontend/src/components/loginForm/loginForm.scss
@@ -1,4 +1,4 @@
-@import "../../main.scss";
+@import "../../utils/colors";
 
 .login {
     box-sizing: border-box;
@@ -12,7 +12,7 @@
     right: 0;
 
     &__icon {
-        font-size: 5rem;
+        height: 5rem;
     }
 
     &__form {
