--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -1,7 +1,7 @@
-@import "../../main.scss";
+@import "../../utils/colors";
 
 .banner {
-    background-image: url('../../assets/bank-tree.jpeg');
+    background-image: url('../../assets/bank-tree.webp');
     background-position: 0 -50px;
     background-size: cover;
     background-repeat: no-repeat;
